--- a/main.html
+++ b/main.html
@@ -49,5 +49,6 @@
 <!--<script src="08/lesson05.js"></script>-->
 <!--<script src="09/lesson01.js"></script>-->
 <!--<script src="09/lesson02.js"></script>-->
-<script src="09/lesson03.js"></script>
+<!-- <script src="09/lesson03.js"></script> -->
+<script src="07/lesson03.js"></script>
 </html>
